test/corpus/less-than-greater-than-in-html-interpolations.txt
=====
Less than / greater than signs in HTML interpolations
=====

<div>
{(() => {
    let x = 3 < 4;
    let y = 4 > 5;
    let z = (x => x);
})}
</div>

--------------------

(document
  (element
    (start_tag
      (tag_name))
    (html_interpolation
      (permissible_text)
      (nested_html_interpolation
        (permissible_text))
      (permissible_text))
    (end_tag
      (tag_name))))
